# arithomath

./: .clang-format  .gitignore  .gitlab-ci.yml  CMakeLists.txt  README.md  vcpkg_install.sh
.devcontainer/: Dockerfile  devcontainer.json  docker-compose.yml
.devenv/: bash_init.sh
src/: .arithmatoy.c.swo  .arithmatoy.c.swp  a.out  arithmatoy.c  cli.c  utils.h
src/include/: arithmatoy.h
src/tests/: test_add.c  test_mul.c  test_sub.c  test_utils.c
tests/: conftest.py  test_arithmatoy.py  test_tp.py  tp.py
tests/outputs/test_add/: test_add_base10_00.txt  test_add_base10_01.txt  test_add_base10_02.txt  test_add_base10_03.txt  test_add_base10_04.txt  test_add_base10_05.txt  test_add_base10_06.txt  test_add_base10_07.txt  test_add_base10_08.txt  test_add_base10_09.txt  test_add_base11_00.txt  test_add_base11_01.txt  test_add_base11_02.txt  test_add_base11_03.txt  test_add_base11_04.txt  test_add_base11_05.txt  test_add_base11_06.txt  test_add_base11_07.txt  test_add_base11_08.txt  test_add_base11_09.txt  test_add_base12_00.txt  test_add_base12_01.txt  test_add_base12_02.txt  test_add_base12_03.txt  test_add_base12_04.txt  test_add_base12_05.txt  test_add_base12_06.txt  test_add_base12_07.txt  test_add_base12_08.txt  test_add_base12_09.txt  test_add_base13_00.txt  test_add_base13_01.txt  test_add_base13_02.txt  test_add_base13_03.txt  test_add_base13_04.txt  test_add_base13_05.txt  test_add_base13_06.txt  test_add_base13_07.txt  test_add_base13_08.txt  test_add_base13_09.txt  (+300 more)
tests/outputs/test_mul/: test_mul_base10_00.txt  test_mul_base10_01.txt  (+328 more)
(+342 files in other folders)
